Updated package.json script deprecations.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "esdoc -c ./esdoc.json",
     "compile": "git clean -xdf lib && babel -d lib/ src/",
     "lint": "eslint src",
-    "prepublish": "npm run compile"
+    "prepare": "npm run compile"
   },
   "repository": {
     "type": "git",
