--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2016-node5", "react"],
-  "plugins": ["transform-async-to-generator"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-transform-async-to-generator", "@babel/plugin-transform-runtime"],
   "sourceMaps": "inline"
 }
