--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "node": ">= 5.0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "@paulcbetts/mime-types": "^2.1.10",
     "@paulcbetts/vueify": "^9.4.3",
-    "babel-core": "^6.13.2",
-    "babel-preset-env": "^1.3.2",
     "btoa": "^1.1.2",
     "cheerio": "^0.20.0",
     "coffeescript": "^1.10.0",
@@ -58,14 +59,12 @@
     "typescript": ">=1.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^6.1.2",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2016-node5": "^1.1.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.18.0",
     "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "^0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
