--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
 node_js:
-- '5'
-- '6'
-- '7'
+ - 6
+ - 7
+ - 8
+ - 9
+ - 10
+ - 11
+ - lts/*
+ - node
 
 script:
 - npm run lint
