--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "babel-eslint": "^6.1.2",
-    "esdoc": "^0.4.8",
-    "esdoc-es7-plugin": "^0.0.3",
+    "babel-eslint": "^10.0.0",
+    "esdoc": "^1.0.1",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-exclude-source-plugin": "^1.0.0",
     "esdoc-plugin-async-to-sync": "^0.5.0",
-    "eslint": "^3.3.0"
+    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^6.0.0"
   }
 }
