Updated all other packages to current major versions.

--- a/package.json
+++ b/package.json
@@ -31,31 +31,32 @@
     "@babel/runtime": "^7.0.0",
     "@paulcbetts/mime-types": "^2.1.10",
     "@paulcbetts/vueify": "^9.4.3",
+    "acorn": "^7.0.0",
     "btoa": "^1.1.2",
-    "cheerio": "^0.20.0",
-    "coffeescript": "^1.10.0",
-    "cson": "^3.0.2",
-    "debug": "^2.5.1",
+    "cheerio": "^1.0.0-rc.3",
+    "coffeescript": "^2.0.0",
+    "cson": "^6.0.0",
+    "debug": "^4.0.0",
     "detective-less": "^1.0.0",
-    "detective-sass": "^2.0.0",
-    "detective-scss": "^1.0.0",
+    "detective-sass": "^3.0.0",
+    "detective-scss": "^2.0.0",
     "detective-stylus": "^1.0.0",
-    "graphql": "^0.9.3",
+    "graphql": "^14.0.0",
     "graphql-tag": "^2.0.0",
     "istanbul": "^0.4.5",
     "jade": "^1.11.0",
     "js-string-escape": "^1.0.1",
-    "less": "^2.7.1",
+    "less": "^3.0.0",
     "mkdirp": "^0.5.1",
     "nib": "^1.1.2",
     "pug": "^2.0.0",
     "resolve": "^1.2.0",
-    "rimraf": "^2.5.4",
-    "sass-lookup": "^1.0.2",
-    "sass.js": "^0.10.1",
+    "rimraf": "^3.0.0",
+    "sass-lookup": "^3.0.0",
+    "sass.js": "^0.11.0",
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
-    "stylus-lookup": "^1.0.1",
+    "stylus-lookup": "^3.0.0",
     "toutsuite": "^0.6.0",
     "typescript": ">=1.6"
   },
