--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,15 @@
 {
-    "parser": "babel-eslint",
-    "rules": {
-        "strict": 0,
-        "indent": [
-            2,
-            2
-        ],
-        "semi": [
-            2,
-            "always"
-        ],
-        "no-console": 0
-    },
-    "env": {
-        "es6": true,
-        "node": true,
-        "browser": true
-    },
-    "extends": "eslint:recommended"
+  "parser": "babel-eslint",
+  "rules": {
+    "strict": "off",
+    "indent": [ "error", 2 ],
+    "semi": [ "error", "always" ],
+    "no-console": "off"
+  },
+  "env": {
+    "es6": true,
+    "node": true,
+    "browser": true
+  },
+  "extends": "eslint:recommended"
 }
