--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "detective-sass": "^3.0.0",
     "detective-scss": "^2.0.0",
     "detective-stylus": "^1.0.0",
+    "filing-cabinet": "^2.5.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.0.0",
     "istanbul": "^0.4.5",
@@ -52,11 +53,9 @@
     "pug": "^2.0.0",
     "resolve": "^1.2.0",
     "rimraf": "^3.0.0",
-    "sass-lookup": "^3.0.0",
     "sass.js": "^0.11.0",
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
-    "stylus-lookup": "^3.0.0",
     "toutsuite": "^0.6.0",
     "typescript": ">=1.6"
   },
