--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "filing-cabinet": "^2.5.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.0.0",
-    "istanbul": "^0.4.5",
+    "istanbul-lib-instrument": "^3.0.0",
     "jade": "^1.11.0",
     "js-string-escape": "^1.0.1",
     "less": "^3.0.0",
