--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lanethegreat/electron-compilers",
-  "version": "6.0.0-beta.6",
+  "version": "6.0.0",
   "description": "Compiler implementations for electron-compile",
   "main": "lib/main.js",
   "scripts": {
