--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "esdoc -c ./esdoc.json",
     "compile": "git clean -xdf lib && babel -d lib/ src/",
     "lint": "eslint src",
-    "prepare": "npm run compile"
+    "prepare": "npm run compile",
+    "test": "mocha --require @babel/register test/*.js"
   },
   "repository": {
     "type": "git",
@@ -66,11 +67,13 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.0",
+    "chai": "^4.0.0",
     "esdoc": "^1.0.1",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-exclude-source-plugin": "^1.0.0",
     "esdoc-plugin-async-to-sync": "^0.5.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^6.0.0"
+    "eslint": "^6.0.0",
+    "mocha": "^6.0.0"
   }
 }
