--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "doc": "esdoc -c ./esdoc.json",
     "compile": "git clean -xdf lib && babel -d lib/ src/",
-    "lint": "eslint src",
+    "lint": "eslint src test",
     "prepare": "npm run compile",
     "test": "mocha --require @babel/register test/*.js"
   },
@@ -74,6 +74,10 @@
     "esdoc-plugin-async-to-sync": "^0.5.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.0.0",
+    "milligram-less": "^1.0.0",
+    "milligram-sass": "^1.0.0",
+    "milligram-scss": "^1.0.0",
+    "milligram-stylus": "^1.0.0",
     "mocha": "^6.0.0"
   }
 }
